commit com erro 'documentationPluginsBootstrapper'